2011-08-22  Peter Beverloo  <peter@chromium.org>

        Add myself to the contributor list.
        https://bugs.webkit.org/show_bug.cgi?id=66674

        Reviewed by Tony Gentilcore.

        * Scripts/webkitpy/common/config/committers.py:

2011-08-22  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] ImageDiff does not consider --tolerance
        https://bugs.webkit.org/show_bug.cgi?id=66299

        Reviewed by Csaba Osztrogonác.

        * DumpRenderTree/qt/ImageDiff.cpp:
        (main):

2011-08-22  Csaba Osztrogonác  <ossy@webkit.org>

        Update contributor list.

        Reviewed by Zoltan Herczeg.

        * Scripts/webkitpy/common/config/committers.py:

2011-08-22  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        [ORWT] Fix --reset-results --add-platform-exceptions combo
        https://bugs.webkit.org/show_bug.cgi?id=65464

        Reviewed by Csaba Osztrogonác.

        * Scripts/old-run-webkit-tests:

2011-08-20  Adam Barth  <abarth@webkit.org>

        garden-o-matic summary.html should have UI for examining failures
        https://bugs.webkit.org/show_bug.cgi?id=66625

        Reviewed by Dimitri Glazkov.

        This patch introduces the notion of UI actions and converts our
        existing manual <button> manipulation with this new abstraction.  The
        patch also adds an Examine button to failure notifications.  In a
        future patch, I'll add a controller that wires this button up to
        something useful.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/garden-o-matic.html:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/run-unittests.html:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/actions.js: Added.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/actions_unittests.js: Added.