@@ -1,3 +1,15 @@
+2011-08-22  Xianzhu Wang  <wangxianzhu@chromium.org>
+
+        Pass --makeargs of build-webkit to chromium linux builder
+        https://bugs.webkit.org/show_bug.cgi?id=66361
+
+        Reviewed by Tony Chang.
+
+        * Scripts/build-webkit:
+        * Scripts/webkitdirs.pm:
+        (buildChromiumMakefile):
+        (buildChromium):
+
 2011-08-22  Peter Beverloo  <peter@chromium.org>
 
         Add myself to the contributor list.
